# video-generator

./: .gitignore  README.MD
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_elevenlabs.py  test_full_pipeline.py  test_gemini.py  test_manual_assembly.py  test_pexels.py  test_pexels_video.py  test_supabase.py
backend/app/: worker.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: video.py
backend/app/core/: celery_app.py  config.py  redis_client.py
backend/app/schemas/: video.py
backend/app/services/: engine_service.py  script_service.py  storage_service.py  visual_service.py  voice_service.py
backend/app/utils/: prompts.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/components/: chat-input.tsx  chat-message.tsx  chat-sidebar.tsx  empty-state.tsx  navbar.tsx
frontend/components/ui/: sidebar.tsx
frontend/lib/: chat-store.ts
